Changed java version to 8 and changed gradle project metadata